# PumpApp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: BodyweightExercise.cpp  BodyweightExercise.h  DatabaseManager.cpp  DatabaseManager.h  Exercise.cpp  Exercise.h  ExerciseFactory.h  ExerciseRepository.cpp  ExerciseRepository.h  WeightedExercise.cpp  WeightedExercise.h  WorkoutPlan.cpp  WorkoutPlan.h  WorkoutPlanRepository.cpp  WorkoutPlanRepository.h
data/: exercises.json  plans.json
gui/: ExerciseDialog.cpp  ExerciseDialog.h  ExerciseDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  WorkoutPlanDialog.cpp  WorkoutPlanDialog.h  WorkoutPlanDialog.ui
tests/: test_main.cpp
